<resources>
    <string name="app_name">Muzien</string>
    <string name="camera">Use camera</string>
    <string name="choose_avatar">Choose an avatar</string>
    <string name="choose_photos">Choose photos</string>
    <string name="select_from_gallery_photo">Upload photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="welcome_idrees">Welcome Idrees</string>
    <string name="owner">Owner</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="add_new">Add New</string>
    <string name="saloon">Saloon</string>
    <string name="member">Member</string>
    <string name="service">Service</string>
    <string name="service_added_n_successfully">Service Added\n Successfully</string>
    <string name="would_you_like_to_enable_the_n_service_for_salons">Would you like to enable the\n service for saloons?</string>
    <string name="not_now">Not Now</string>
    <string name="yes_proceed">Yes, Proceed</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="are_you_sure_you_want_to_n_cancel_the_booking">Are you sure you want to\n cancel the booking?</string>
    <string name="provide_reason">Provide Reason</string>
    <string name="cancel">Cancel</string>
    <string name="faheem_abbas">Faheem Abbas</string>
    <string name="april_2023">April 2023</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="back">Back</string>
    <string name="select_days">Select Days</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="add_services">Add Services</string>
    <string name="selected_services">Selected Services</string>
    <string name="no_service_added">No service added</string>
    <string name="holidays">Holidays</string>
    <string name="add_salon_holidays">Add saloon holidays</string>
    <string name="save">Save</string>
    <string name="add_new_payment">Add New Payment</string>
    <string name="abc">ABC</string>
    <string name="card_number">Card Number</string>
    <string name="dd_mm">DD/MM</string>
    <string name="exp_date">Exp. Date</string>
    <string name="cvv">CVV</string>
    <string name="zip_code">Zip Code</string>
    <string name="security_is_important_to_us_your_information_is_private_and_protected">Security is important to us. Your information is private and protected</string>
    <string name="pay_now">Pay Now</string>
    <string name="information">Information</string>
    <string name="saloon_name">Saloon Name</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="_966">+966</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_valid_phone_number">Enter valid Phone number</string>
    <string name="description">Description</string>
    <string name="enter_valid_description">Enter valid description</string>
    <string name="salon_location">Saloon Location</string>
    <string name="select_location">Select Location</string>
    <string name="rd_2121_alamal_dist_12643_riyadh_sa">Rd. 2121 Alamal Dist. 12643 Riyadh SA</string>
    <string name="salon_certificate">Saloon Certificate</string>
    <string name="file_name_pdf">File name.pdf</string>
    <string name="uploaded_on_10_00_am_11_00_pm">Uploaded on 10:00 AM - 11:00 PM</string>
    <string name="work_hours">Work Hours</string>
    <string name="no_holiday_added">No holiday added</string>
    <string name="by_continuing_you_agree_to_our_tc_and_privacy_policy">By continuing you agree to our TC and Privacy Policy</string>
    <string name="continue_text">Continue</string>
    <string name="add_member">Add Member</string>
    <string name="enter_email_id_to_invite_a_member">Enter email ID to invite a member</string>
    <string name="smith_gmail_com">Smith@gmail.com</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="select_a_salon_optional">Select a Saloon</string>
    <string name="add_service">Add Service</string>
    <string name="provide_the_information_to_add_n_a_service">Provide the information to add\n a service</string>
    <string name="hair_service">Hair Service</string>
    <string name="select_category">Select Category</string>
    <string name="fauxhawk">Fauxhawk</string>
    <string name="service_name">Service Name</string>
    <string name="_45_mins">45 mins</string>
    <string name="duration">Duration</string>
    <string name="sar">SAR</string>
    <string name="_20">20</string>
    <string name="price">Price</string>
    <string name="save_amp_add_new"><![CDATA[Save & Add New]]></string>
    <string name="add_salon_work_hours">Add saloon work hours</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="opening_time">Opening Time</string>
    <string name="_00_00_pm">00:00 PM</string>
    <string name="closing_time">Closing Time</string>
    <string name="this_week">This Week</string>
    <string name="scheduled">Scheduled</string>
    <string name="_30">0</string>
    <string name="overdue">Overdue</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="top_5_performers">Top 5 Performers</string>
    <string name="earnings">Earnings</string>
    <string name="_1340">0</string>
    <string name="revenue">Revenue</string>
    <string name="monthly">Monthly</string>
    <string name="filter">Filter</string>
    <string name="booking_status">Booking Status</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="overdue_incomplete">Overdue/Incomplete</string>
    <string name="select_a_option">Select a option</string>
    <string name="timeperiod">Time Period</string>
    <string name="selectstatus">Select Status</string>
    <string name="all">All</string>
    <string name="custome_timeperiod">Custome Time Period</string>
    <string name="select_date">Select Date</string>
    <string name="select_specific">Select Specific</string>
    <string name="select_saloon">Select Saloon</string>
    <string name="service_providers">Service Providers</string>
    <string name="provider">Provider</string>
    <string name="select_provider">Select Provider</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="change_language">Change Language</string>
    <string name="confirm">Confirm</string>
    <string name="edit_about">Edit About</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and type setting industry.</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="this_month">This Month</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="analytics">Analytics</string>
    <string name="saloon_4">Saloons</string>
    <string name="members_4">Members</string>
    <string name="services">Services</string>
    <string name="invite_to_a_salon">Invite to a saloon</string>
    <string name="select_a_salon_to_invite_user">Select a saloon to invite user</string>
    <string name="invite">Invite</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="my_account">My Account</string>
    <string name="update">Update</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_valid_mobile_number">Enter valid Mobile Number</string>
    <string name="john_smith">John Smith</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="email">Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="manager_in_app_notifications">Manager In-App Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="elsewhere_notifications">Elsewhere Notifications</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="sms">SMS</string>
    <string name="notifications">Notifications</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="the_otp_has_been_sent">The OTP has been sent</string>
    <string name="otp_is_invalid">OTP is invalid</string>
    <string name="next">Next</string>
    <string name="didn_t_receive_code_resend_in_0_30">Didn’t receive code? Resend in 0:30</string>
    <string name="access_your_saloon_revenue_and_continuously_enhance_your_service_quality">Access your saloon revenue and continuously enhance your service quality</string>
    <string name="salon_subscription_fee">Saloon Subscription Fee</string>
    <string name="_1_year_subscription">1 year subscription</string>
    <string name="total_fee">Total Fee:</string>
    <string name="other_method">Other Method</string>
    <string name="profile">Profile</string>
    <string name="salon_owner">Saloon owner</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_muzien">About Muzien</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="english">English</string>
    <string name="logout">Logout</string>
    <string name="the_style_zone">The Style Zone</string>
    <string name="open_today">open today</string>
    <string name="_4_5_10_reviews">4.5(10 reviews)</string>
    <string name="_10_00_am_11_00_pm">10:00 AM - 11:00 PM</string>
    <string name="store_info">Saloon Info</string>
    <string name="reviews">Reviews</string>
    <string name="members">Members</string>
    <string name="select_a_date">Select a date</string>
    <string name="saturday_thursday">Saturday - Thursday</string>
    <string name="name">Name</string>
    <string name="_30_services">30 services</string>
    <string name="saturday">Saturday</string>
    <string name="highbrow_beauty_bar">Highbrow Beauty Bar</string>
    <string name="renew">Renew</string>
    <string name="upload">Upload</string>
    <string name="subscribed_on">Subscribed On</string>
    <string name="_12_12_2023">12/12/2023</string>
    <string name="expiring_on">Expiring On</string>
    <string name="_12_12_2024">12/12/2024</string>
    <string name="_12_04_2024_10_00_am_1_5_hr">12/04/2024 - 10:00 AM - 1.5 hr</string>
    <string name="cancelled_by_customer">Cancelled by Customer</string>
    <string name="reason">Reason</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_n_n12_12_2023"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text]]></string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="jennifer_austin">Jennifer Austin</string>
    <string name="added_on_12_12_2023">Added on: 12/12/2023</string>
    <string name="_4_5">4.5</string>
    <string name="falansai">Falansai</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="store_tye_style_zone">Store Tye Style Zone</string>
    <string name="_4_bookings_today">4 bookings today</string>
    <string name="manager">Manager</string>
    <string name="_10_services">10 Services</string>
    <string name="inactivate_user">Inactivate User</string>
    <string name="delete_user">Delete User</string>
    <string name="france">🇫🇷 France</string>
    <string name="_4_today">4 today</string>
</resources>