<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="7dp"
    android:paddingTop="15dp"
    android:paddingEnd="7dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/highbrow_beauty_bar"
        android:textColor="@color/black_shade1"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_primary"
        android:fontFamily="@font/manrope_regular"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/renew"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="500"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/subscribed_on"
        android:textColor="@color/black_shade1"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/_12_12_2023"
        android:textColor="@color/black_shade1"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/expiring_on"
        android:textColor="@color/black_shade1"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/_12_12_2024"
        android:textColor="@color/black_shade1"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/overdue"
        android:textColor="@color/black_shade1"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="10"
        android:textColor="@color/black_shade1"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/light_grey_border"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

</androidx.constraintlayout.widget.ConstraintLayout>