<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/back_button"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="21dp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBack"
        app:srcCompat="@drawable/edit_saloon_icon" />


    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/edit_about"
        android:textColor="@color/colorTextLabelDefault"
        android:textFontWeight="700"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/llAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_white_grey"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="160dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/llBack"
        app:layout_constraintTop_toBottomOf="@+id/txtLabel">


        <EditText
            android:id="@+id/edtAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left|top"
            android:background="@android:color/transparent"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/dummy_text"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextDefault"
            android:textFontWeight="400"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-10dp"
        android:background="@color/white"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/description"
        android:textColor="@color/colorTextLabelDefault"
        android:textFontWeight="500"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/llAbout"
        app:layout_constraintStart_toStartOf="@+id/llAbout" />

    <TextView
        android:id="@+id/txtEmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/enter_valid_description"
        android:textColor="@color/red_text"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/llAbout"
        app:layout_constraintTop_toBottomOf="@+id/llAbout" />


    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_blue_100"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/llAbout"
        app:layout_constraintStart_toStartOf="@+id/llAbout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>